# crail-reflex

./: README.md
libreflex/: Makefile.am
libreflex/src/: stanford_mast_reflex_NativeDispatcher.cpp  stanford_mast_reflex_NativeDispatcher.h
src/main/java/stanford/mast/reflex/: NativeDispatcher.java  ReFlexEndpoint.java
src/test/java/com/ibm/disni/benchmarks/: ReFlexClientBenchmark.java  ReFlexEndpointClient.java
